--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "homepage": "https://github.com/sap-labs-france/ev-dashboard",
   "version": "2.5.14",
   "engines": {
-    "npm": "8.x.x."
+    "npm": "8.x.x.",
+    "node": "14.x"
   },
   "repository": {
     "type": "git",
