--- a/package.json
+++ b/package.json
@@ -39,12 +39,10 @@
     "ngcc": "ngcc",
     "postinstall": "npm run ngcc",
     "ng": "ng",
-    "start": "npm version && ng serve --configuration=development",
     "start:ssl": "npm version && ng serve --configuration=development --ssl true --ssl-key ./ssl/localhost.key --ssl-cert ./ssl/localhost.cert",
-    "start:prod": "npm version && cross-env NODE_OPTIONS=\"--max-old-space-size=4096\" ng serve --prod",
+    "start": "npm version && cross-env NODE_OPTIONS=\"--max-old-space-size=4096\" ng serve --prod",
     "start:prod:ssl": "npm version && cross-env NODE_OPTIONS=\"--max-old-space-size=4096\" ng serve --prod --ssl true --ssl-key ./ssl/localhost.key --ssl-cert ./ssl/localhost.cert",
-    "build": "npm run build:dev",
-    "build:prod": "npm version && cross-env NODE_OPTIONS=\"--max-old-space-size=4096\" ng build --prod --stats-json",
+    "build": "npm version && cross-env NODE_OPTIONS=\"--max-old-space-size=4096\" ng build --prod --stats-json",
     "build:dev": "npm version && ng build --configuration=development --stats-json",
     "codeceptjstest": "npm version && npm run e2e",
     "eslint": "ng lint",
